[TMP] Fix image display problem on Safari 14.1.1
Further investigation required

--- a/app/assets/stylesheets/budgets/investments-list.scss
+++ b/app/assets/stylesheets/budgets/investments-list.scss
@@ -25,7 +25,6 @@
     img {
       border-top-left-radius: rem-calc(6);
       border-top-right-radius: rem-calc(6);
-      flex: 1;
       width: fit-content;
     }
 
